test/invalid/baseline/setlike-2types.txt
Syntax error at line 2, since `interface SetLikeTwoTypes`:
  setlike<long, long>;
              ^ Missing greater-than sign `>` in setlike declaration
